# backend_frontend_test

./: .dockerignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  api.ts
mqtt-client/: Cargo.toml  Dockerfile
mqtt-client/src/: main.rs
mqtt-client/src /: main.rs
